--- a/simonsays/index.html
+++ b/simonsays/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="container">
+        <ul>
+            <li>score: <span></span></li>
+        </ul>
         <p class="container-frase" id="text"> Click the button to start!!</p>
         <p class="container-frase-check" id="checkAction"></p>
         <div class="container-start">
