--- a/simonsays/index.html
+++ b/simonsays/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <ul>
-            <li>score: <span></span></li>
+            <li>Score: <span>0</span> | Max Score: <span id="max"></span></li>
         </ul>
         <p class="container-frase" id="text"> Click the button to start!!</p>
         <p class="container-frase-check" id="checkAction"></p>
